--- a/servarr-compose.yaml
+++ b/servarr-compose.yaml
@@ -9,7 +9,7 @@ services:
         - UMASK=002
         - TZ=EST
       volumes:
-        - /home/rogerstevens/ServarrSuite/config/sonarr-config:/config
+        - /ServarrSuite/config/sonarr-config:/config
         - /mnt/samsung870/data:/data
       ports:
           - "8989:8989"
@@ -24,7 +24,7 @@ services:
         - UMASK=002
         - TZ=EST
       volumes:
-        - /home/rogerstevens/ServarrSuite/config/radarr-config:/config
+        - /ServarrSuite/config/radarr-config:/config
         - /mnt/samsung870/data:/data
       ports:
         - "7878:7878"
@@ -39,7 +39,7 @@ services:
         - UMASK=002
         - TZ=EST
       volumes:
-        - /home/rogerstevens/ServarrSuite/config/lidarr-config:/config
+        - /ServarrSuite/config/lidarr-config:/config
         - /mnt/samsung870/data:/data
       ports:
         - "8686:8686"
@@ -54,7 +54,7 @@ services:
         - UMASK=002
         - TZ=EST
       volumes:
-        - /home/rogerstevens/ServarrSuite/config/readarr-config:/config
+        - /ServarrSuite/config/readarr-config:/config
         - /mnt/samsung870/data:/data
       ports:
         - "8787:8787"
@@ -69,7 +69,7 @@ services:
         - UMASK=002
         - TZ=EST
       volumes:
-        - /home/rogerstevens/ServarrSuite/config/prowlarr-config:/config
+        - /ServarrSuite/config/prowlarr-config:/config
         - /mnt/samsung870/data:/data
       ports:
         - "9696:9696"
@@ -84,7 +84,7 @@ services:
         - UMASK=002
         - TZ=EST
       volumes:
-        - /home/rogerstevens/ServarrSuite/config/jellyfin-config:/config
+        - /ServarrSuite/config/jellyfin-config:/config
         - /mnt/samsung870/data/media:/data/media
       ports:
         - "9000:9000"
@@ -100,7 +100,7 @@ services:
         - LOG_LEVEL=debug
         - TZ=EST
       volumes:
-        - /home/rogerstevens/ServarrSuite/config:/app/config
+        - /ServarrSuite/config:/app/config
         - /mnt/samsung870/data/media:/data/media
       ports:
         - 5055:5055
@@ -116,7 +116,7 @@ services:
         - TZ=EST
         - WEBUI_PORT=8080
       volumes:
-        - /home/rogerstevens/ServarrSuite/config/qbittorrent-config:/config
+        - /ServarrSuite/config/qbittorrent-config:/config
         - /mnt/samsung870/data/torrents:/data/torrents
       ports:
         - "8080:8080"
