--- a/servarr-compose.yaml
+++ b/servarr-compose.yaml
@@ -125,12 +125,13 @@ services:
       restart: unless-stopped
 
     gluetun:
-    image: qmcgaw/gluetun
-    cap_add:
-      - NET_ADMIN
-    environment:
-      - VPN_SERVICE_PROVIDER=expressvpn
-      - OPENVPN_USER= njwk7851veqb6q3yhvpzgmpj
-      - OPENVPN_PASSWORD= uvuea6ymbh2lfccykwygu8ov
-      - SERVER_COUNTRIES=Netherlands, USA
-    restart: unless-stopped
+      image: qmcgaw/gluetun
+      container_name: gluetun
+      cap_add:
+        - NET_ADMIN
+      environment:
+        - VPN_SERVICE_PROVIDER=expressvpn
+        - OPENVPN_USER= njwk7851veqb6q3yhvpzgmpj
+        - OPENVPN_PASSWORD= uvuea6ymbh2lfccykwygu8ov
+        - SERVER_COUNTRIES=Netherlands, USA
+      restart: unless-stopped
