--- a/servarr-compose.yaml
+++ b/servarr-compose.yaml
@@ -17,6 +17,9 @@ services:
         - 8787:8787 # Readarr
         - 5055:5055 # jellyseer
         - 5299:5299 # Lazylibrarian
+        - "8080:8080" # qbittorrent
+        - "6881:6881" # qbittorrent
+        - "6881:6881/udp" # qbittorrent
       environment:
         - VPN_SERVICE_PROVIDER=expressvpn
         - OPENVPN_USER= njwk7851veqb6q3yhvpzgmpj
@@ -43,8 +46,6 @@ services:
       volumes:
         - /ServarrSuite/config/sonarr-config:/config
         - /mnt/samsung870/data:/data
-      ports:
-          - "8989:8989"
       restart: unless-stopped
 
     radarr:
@@ -59,8 +60,6 @@ services:
       volumes:
         - /ServarrSuite/config/radarr-config:/config
         - /mnt/samsung870/data:/data
-      ports:
-        - "7878:7878"
       restart: unless-stopped
 
     lidarr:
@@ -75,8 +74,6 @@ services:
       volumes:
         - /ServarrSuite/config/lidarr-config:/config
         - /mnt/samsung870/data:/data
-      ports:
-        - "8686:8686"
       restart: unless-stopped
       
     readarr:
@@ -91,8 +88,6 @@ services:
       volumes:
         - /ServarrSuite/config/readarr-config:/config
         - /mnt/samsung870/data:/data
-      ports:
-        - "8787:8787"
       restart: unless-stopped
 
     lazylibrarian:
@@ -106,8 +101,6 @@ services:
       volumes:
         - /ServarrSuite/config/lazylibrarian-config:/config
         - /mnt/samsung870/data:/data
-      ports:
-        - "5299:5299"
       restart: unless-stopped
 
     prowlarr:
@@ -122,8 +115,6 @@ services:
       volumes:
         - /ServarrSuite/config/prowlarr-config:/config
         - /mnt/samsung870/data:/data
-      ports:
-        - "9696:9696"
       restart: unless-stopped
 
     qbittorrent:
@@ -139,10 +130,6 @@ services:
       volumes:
         - /ServarrSuite/config/qbittorrent-config:/config
         - /mnt/samsung870/data/torrents:/data/torrents
-      ports:
-        - "8080:8080"
-        - "6881:6881"
-        - "6881:6881/udp"
       restart: unless-stopped
           
     jellyfin:
@@ -173,6 +160,4 @@ services:
       volumes:
         - /ServarrSuite/config:/app/config
         - /mnt/samsung870/data/media:/data/media
-      ports:
-        - 5055:5055
       restart: unless-stopped
