Re-added port variables for each service.

--- a/servarr-compose.yaml
+++ b/servarr-compose.yaml
@@ -25,7 +25,7 @@ services:
         - VPN_SERVICE_PROVIDER=expressvpn
         - OPENVPN_USER= njwk7851veqb6q3yhvpzgmpj
         - OPENVPN_PASSWORD= uvuea6ymbh2lfccykwygu8ov
-        - SERVER_COUNTRIES=Netherlands
+        - SERVER_COUNTRIES= USA
         - HTTPPROXY=on
         - PUID=1000
         - PGID=1000
@@ -46,6 +46,8 @@ services:
       volumes:
         - /ServarrSuite/config/sonarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "8989:8989"  
       restart: unless-stopped
 
     radarr:
@@ -60,6 +62,8 @@ services:
       volumes:
         - /ServarrSuite/config/radarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "7878:7878"
       restart: unless-stopped
 
     lidarr:
@@ -74,6 +78,8 @@ services:
       volumes:
         - /ServarrSuite/config/lidarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "8686:8686"
       restart: unless-stopped
       
     readarr:
@@ -88,6 +94,8 @@ services:
       volumes:
         - /ServarrSuite/config/readarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "8787:8787"
       restart: unless-stopped
 
     lazylibrarian:
@@ -101,6 +109,8 @@ services:
       volumes:
         - /ServarrSuite/config/lazylibrarian-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "5299:5299"
       restart: unless-stopped
 
     prowlarr:
@@ -115,6 +125,8 @@ services:
       volumes:
         - /ServarrSuite/config/prowlarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "9696:9696"
       restart: unless-stopped
 
     qbittorrent:
@@ -130,6 +142,10 @@ services:
       volumes:
         - /ServarrSuite/config/qbittorrent-config:/config
         - /mnt/samsung870/data/torrents:/data/torrents
+      ports:
+        - "8080:8080"
+        - "6881:6881"
+        - "6881:6881/udp"
       restart: unless-stopped
           
     jellyfin:
@@ -145,7 +161,7 @@ services:
         - /mnt/samsung870/data/media:/data/media
       ports:
         - 8096:8096
-      restart: unless-stopped
+      restart: unlevss-stopped
 
     jellyseerr:
       image: fallenbagel/jellyseerr:latest
@@ -160,4 +176,6 @@ services:
       volumes:
         - /ServarrSuite/config:/app/config
         - /mnt/samsung870/data/media:/data/media
+      ports:
+        - 5055:5055
       restart: unless-stopped
