--- a/servarr-compose.yaml
+++ b/servarr-compose.yaml
@@ -11,13 +11,7 @@ services:
         - 8388:8388/tcp # Shadowsocks
         - 8388:8388/udp # Shadowsocks
         - 8001:8001/tcp # Built-in HTTP control server
-        - 7878:7878 # radarr
-        - 8989:8989 # sonarr
-        - 8686:8686 # lidarr
-        - 8787:8787 # readarr
         - 9696:9696 # prowlarr
-        - 5055:5055 # jellyseer
-        - 5299:5299 # Lazylibrarian
         - 8080:8080 # qbittorrent
         - 6881:6881 # qbittorrent
         - 6881:6881/udp # qbittorrent
@@ -33,7 +27,7 @@ services:
       volumes:
         - /ServarrSuite/config/gluetun-config:/config
       restart: unless-stopped
-
+    
     sonarr:
       image: lscr.io/linuxserver/sonarr:latest
       container_name: sonarr
@@ -46,6 +40,8 @@ services:
       volumes:
         - /ServarrSuite/config/sonarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+          - "8989:8989"
       restart: unless-stopped
 
     radarr:
@@ -60,6 +56,8 @@ services:
       volumes:
         - /ServarrSuite/config/radarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "7878:7878"
       restart: unless-stopped
 
     lidarr:
@@ -74,6 +72,8 @@ services:
       volumes:
         - /ServarrSuite/config/lidarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "8686:8686"
       restart: unless-stopped
       
     readarr:
@@ -88,6 +88,8 @@ services:
       volumes:
         - /ServarrSuite/config/readarr-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "8787:8787"
       restart: unless-stopped
 
     lazylibrarian:
@@ -101,6 +103,8 @@ services:
       volumes:
         - /ServarrSuite/config/lazylibrarian-config:/config
         - /mnt/samsung870/data:/data
+      ports:
+        - "5299:5299"
       restart: unless-stopped
 
     prowlarr:
@@ -144,7 +148,7 @@ services:
         - /ServarrSuite/config/jellyfin-config:/config
         - /mnt/samsung870/data/media:/data/media
       ports:
-        - 8096:8096
+        - "8096:8096"
       restart: unless-stopped
 
     jellyseerr:
@@ -160,4 +164,6 @@ services:
       volumes:
         - /ServarrSuite/config:/app/config
         - /mnt/samsung870/data/media:/data/media
+      ports:
+        - 5055:5055
       restart: unless-stopped
